# lab-contexteng

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  astro.config.mjs  build.sh  create_dist.sh  docker-compose.yml  generate  httpd.conf  lab-config.js  litellm_config.yaml  package-lock.json  package.json  start.sh  stop.sh
.astro/: settings.json
materials/: pyproject.toml
materials/progressive_agents/stage1_baseline_rag/: README.md
materials/progressive_agents/stage1_baseline_rag/.ipynb_checkpoints/: cli-checkpoint.py
materials/progressive_agents/stage1_baseline_rag/agent/: workflow.py
materials/progressive_agents/stage2_data_engineered/agent/: __init__.py
materials/progressive_agents/stage3_hierarchical_retrieval/: test_intent_classifier.py  test_linear_algebra.py  test_search_tool.py  test_simple.py  test_util.py
materials/progressive_agents/stage3_hierarchical_retrieval/.ipynb_checkpoints/: test_comparison-checkpoint.py  test_context_assembler-checkpoint.py  test_intent_classifier-checkpoint.py  test_quality_evaluator-checkpoint.py  test_search_tool-checkpoint.py  test_util-checkpoint.py
materials/progressive_agents/stage3_hierarchical_retrieval/agent/: setup.py  tools.py
materials/progressive_agents/stage4_hybrid_search_react/: cli.py  test_hybrid_search.py
materials/progressive_agents/stage4_hybrid_search_react/.ipynb_checkpoints/: test_hybrid_search-checkpoint.py  test_react_agent-checkpoint.py
materials/progressive_agents/stage4_hybrid_search_react/agent/: react_prompts.py  workflow.py
materials/progressive_agents/stage5_working_memory/: README.md  cli.py  test_agent_intents.py  test_load_memory.py  test_simple.py
materials/progressive_agents/stage5_working_memory/.ipynb_checkpoints/: test_react_multi_turn-checkpoint.py  test_react_simple-checkpoint.py  test_workflow_with_memory-checkpoint.py
materials/progressive_agents/stage5_working_memory/agent/: __init__.py  nodes.py
materials/progressive_agents/stage6_full_memory/: README.md  cli.py  debug_search.py  test_agent_intents.py  test_linear_algebra.py  test_react_intents.py  test_react_simple.py  test_search_memories_tool.py
materials/progressive_agents/stage6_full_memory/.ipynb_checkpoints/: test_memory_tools-checkpoint.py  test_store_memory_tool-checkpoint.py
materials/progressive_agents/stage6_full_memory/agent/: nodes.py  react_prompts.py
materials/section-1-context-engineering-foundations/: project_overview.ipynb  stage_0_crafting_effective_system_prompts.ipynb  stage_2_data_engineered_rag.ipynb
materials/section-3-memory-context/: stage_6_full_memory.ipynb
materials/src/redis_context_course/: course_manager.py  optimization_helpers.py  tools.py
materials/src/redis_context_course/.ipynb_checkpoints/: course_manager-checkpoint.py  hierarchical_context-checkpoint.py  redis_config-checkpoint.py
materials/src/redis_context_course/scripts/: generate_courses_from_hierarchical.py  ingest_courses.py
materials/university/progressive_agents/stage2_data_engineered/: README.md  cli.py
materials/university/progressive_agents/stage3_hierarchical_retrieval/: README.md  cli.py  test_context_assembler.py  test_quality_evaluator.py
materials/university/progressive_agents/stage4_hybrid_search_react/: README.md  test_react_agent.py
materials/university/progressive_agents/stage5_working_memory/: query_long_term_memory.py  test_exact_match_react.py  test_linear_algebra.py  test_save_memory.py
materials/university/progressive_agents/stage6_full_memory/: test_exact_match.py  test_react_linear_algebra.py  test_react_multi_turn.py  test_simple.py  test_simple_memory.py
materials/university/section-1-context-engineering-foundations/: introduction_to_context_engineering.ipynb  stage_0_crafting_effective_system_prompts.ipynb  stage_1_baseline_rag.ipynb
materials/university/section-2-from-pipeline-to-agent/: stage_3_hierarchical_retrieval.ipynb  stage_4_hybrid_search_and_react.ipynb
materials/university/section-3-memory-context/: stage_5_working_memory.ipynb
materials/university/src/redis_context_course/: hierarchical_manager.py  hierarchical_models.py  semantic_tool_selector.py
materials/ws/: pyproject.toml
materials/ws/notebooks/: 01_introduction_to_context_engineering.ipynb  02_rag_essentials.ipynb  03_data_engineering_theory.ipynb  04_memory_systems.ipynb  stage6_chat.ipynb
materials/ws/progressive_agents/stage1_baseline_rag/: __init__.py  cli.py
materials/ws/progressive_agents/stage2_context_engineered/: cli.py
materials/ws/progressive_agents/stage3_full_agent_without_memory/: __init__.py  debug_search.py  test_linear_algebra.py  test_simple.py
materials/ws/progressive_agents/stage4_hybrid_search/: __init__.py
materials/ws/progressive_agents/stage5_working_memory/: cli.py  test_agent_intents.py  test_exact_match_react.py  test_linear_algebra.py  test_react_multi_turn.py  test_react_simple.py  test_simple.py
(+233 files in other folders)
